<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.Restaurante.addRestauranteFragment" >

    <EditText
        android:id="@+id/txt_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/msg_Nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        tools:ignore="EditableContentDescCheck" />

    <EditText
        android:id="@+id/txt_Telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/msg_Telefono"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/txt_Ubicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/msg_Ubicacion"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/txt_Platillos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/msg_Platillos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/bt_addRestaurante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_add_restaurante"
        android:textColor="#006064" />
</LinearLayout>