<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tx_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_correo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_correo"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="#757575"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tx_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_clave"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/et_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_clave"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="#757575"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:baselineAligned="false"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:backgroundTint="@color/purple_700"
            android:contentDescription="@string/bt_registro"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_register"
            app:tint="@color/white"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:contentDescription="@string/bt_loguearse"
            android:minHeight="48dp"
            android:tint="#0B0000"
            app:srcCompat="@drawable/ic_login"
            app:tint="@color/black"
            tools:ignore="UseAppTint" />
    </LinearLayout>

</LinearLayout>